--- a/backend-ws/package.json
+++ b/backend-ws/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "url": "^0.11.3",
     "ws": "^8.16.0"
   },
   "devDependencies": {
